# PJN-chatbot-mental-health-counseling

./: .gitignore  README.md  pyproject.toml  requirements.txt
chatbot_mental_health_counseling/: __init__.py  evaluation.py  finetuning.py  metrics.py  model_run.py
pjn-project/: evaluation.py  finetuning.py  metrics.py
pjn_project/: finetuning_model.py  metrics.py  model_finetuning.py  model_run.py  precommit_hook.py  test.py  text.py
