[tool.poetry]
name = "pjn-project"
version = "0.1.0"
description = ""
authors = ["s20488 <s20488@pjwstk.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pip = "^24.3.1"
setuptools = "^75.8.0"
tzdata = "^2024.2"
vc = "^2018.7.10"
wheel = "^0.45.1"
torch = "^2.5.1"
datasets = "^3.2.0"
transformers = "^4.48.1"
peft = "^0.14.0"
trl = "^0.13.0"
nltk = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
